fix/presenter and evaluator overflow:hidden

--- a/client/src/components/PresentationsItem.scss
+++ b/client/src/components/PresentationsItem.scss
@@ -35,6 +35,7 @@
     .presenter {
         width: 15%;
         padding-left: 0;
+        overflow: hidden;
         @media (max-width: 768px) {
             font-weight: bold;
             width: 50%;
@@ -48,6 +49,7 @@
 
     .evaluator {
         width: 15%;
+        overflow: hidden;
         @media (max-width: 768px) {
             width: 50%;
             display: flex;
